[gd_scene load_steps=7 format=2]

[ext_resource path="res://StaticArt/dialoguebox.png" type="Texture" id=1]
[ext_resource path="res://GnuUnifontFull-Pm9P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Code/FlavorText.gd" type="Script" id=3]
[ext_resource path="res://StaticArt/documentationbutton.png" type="Texture" id=4]
[ext_resource path="res://StaticArt/documentationbuttonpress.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
extra_spacing_bottom = -1
font_data = ExtResource( 2 )

[node name="Dialogue" type="Node2D"]

[node name="Dialoguebox" type="Sprite" parent="."]
position = Vector2( 80, 72 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Title" type="RichTextLabel" parent="Dialoguebox"]
margin_left = -77.0
margin_top = -69.0
margin_right = -3.0
margin_bottom = -38.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quote" type="RichTextLabel" parent="Dialoguebox"]
margin_left = -77.0
margin_top = -36.0
margin_right = -3.0
margin_bottom = 51.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="link" type="TextureButton" parent="Dialoguebox"]
margin_left = -74.0
margin_top = 52.0
margin_right = -6.0
margin_bottom = 69.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="mouse_entered" from="Dialoguebox/link" to="Dialoguebox" method="_on_link_mouse_entered"]
[connection signal="mouse_exited" from="Dialoguebox/link" to="Dialoguebox" method="_on_link_mouse_exited"]
[connection signal="pressed" from="Dialoguebox/link" to="Dialoguebox" method="_on_link_pressed"]
[connection signal="timeout" from="Timer" to="Dialoguebox" method="_on_Timer_timeout"]
